# unstructured-data-processing-final-project

./: .gitignore  CONTRIBUTING.md  README.md  pyproject.toml  requirements.txt
data/: README.md  company_master.csv  seed_dictionary.csv  stopwords_ko_esg.txt
docs/professor_md/: 01_assignment_overview.md  02_dart_data_collection.md  03_minimal_analysis_example.md  04_submission_and_evaluation.md
docs/supplements/: GLOSSARY_비전공자용어사전.html  PLAN_비전공자_보강_v0.1.md  SUPPLEMENT_8단계보강가이드.html
docs/supplements/versions/v0.1/: ANALYSIS_프로젝트분석.html  ROLES_역할분담재설계.html  _VERSION.md
docs/supplements/versions/v0.2/: COLLECTION_데이터수집가이드.html  ROADMAP_5일_데드라인.html  _VERSION.md
docs/supplements/versions/v0.3/: COLLECTION_데이터수집가이드_v0.3.html  _VERSION.md
docs/supplements/versions/v0.4/: ROADMAP_이동원_solo_v0.4.html  _VERSION.md
members/: README.md  _TEMPLATE_노트북_표준헤더.md
members/_integrated/: README.md
members/김지우/: README.md
members/김혜성/: README.md
members/신지영/: README.md
members/이동원/: README.md
members/이동원/notebooks/: 01_collection.ipynb
notebooks/: .gitkeep  01_collection.ipynb
reports/: .gitkeep  01_collection_README.md
src/: .gitkeep
